# markdown-to-html

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.wasm  README.md  build.rs
.github/workflows/: pages.yml  release.yml  test.yml
.hooks/: pre-commit
_site/: index.html
_site/examples/: blockquote.expect.html  blockquote.md  code.expect.html  code.md  gen.sh  html_passthrough.expect.html  html_passthrough.md  inline.expect.html  inline.md  links_images.expect.html  links_images.md  lists.expect.html  lists.md  mixed.expect.html  mixed.md  multiline.expect.html  multiline.md  table.expect.html  table.md
src/: codegen.hom  inline.hom  lexer.hom  lib.rs  main.rs  parser.hom  table.hom  types.hom
tests/e2e/: test_examples.rs
